--- a/apexnext/styles/Menu.module.css
+++ b/apexnext/styles/Menu.module.css
@@ -103,17 +103,30 @@
 /* selectable grid */
 .characterContainer {
     position: relative;
-
 }
 
 /* for each character in selectable grid */
+@keyframes hoverpulse {
+    50% {
+        border: solid 4px orange;
+    }
+    80% {
+        border: solid 4px rgb(199, 199, 199);
+    }
+}
+
 .selected {
     transform: skewX(-18deg);
-    border: solid 4px orange;
+    border: solid orange;
     margin: auto;
     height: 100%;
     width: 100%;
 }
+
+.selected:hover {
+    animation: hoverpulse 1.51s infinite;
+}
+
 
 .selected > p {
     background-color: orange;
@@ -136,21 +149,14 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-
-.selectable:hover{
-    border: 4px orange solid;
+.selectable:hover {
+    animation: hoverpulse 1.51s infinite;
 }
-
-/* .selectable {
-    width: 100%;
-    height: 100%;
-} */
 
 .selectableName {
     transform: skewX(18deg);
@@ -163,7 +169,6 @@
     margin: auto;
     height: 100%;
     width: 100%;
-
 }
 
 .notSelectable p {
@@ -173,5 +178,4 @@
     align-items: center;
     background-color: gray;
     width: 100%;
-    height: 20%;
 }
