--- a/apexnext/styles/Menu.module.css
+++ b/apexnext/styles/Menu.module.css
@@ -25,10 +25,15 @@
     font-family: Apex Sub;
 }
 
+/* Main container */
+.mainContainer {
+    background-image: linear-gradient(217deg, gold, orange, red);
+}
+
 /* Name above selectable characters */
 .hoveredName {
-    background-color: rgba(238, 238, 238, 0.486);
-    border-bottom: solid 1.7vh rgba(243, 243, 243, 0.849);
+    background-color: rgba(238, 238, 238, 0.315);
+    border-bottom: solid 1.7vh rgba(243, 243, 243, 0.384);
     width: 49.63vw;
     height: 12vh;
     position: relative;
@@ -40,7 +45,7 @@
 }
 
 .hoveredNameDisplay {
-    color: rgba(97, 97, 97, 0.767);
+    color: rgba(97, 97, 97, 0.781);
     position: absolute;
     display: flex;
     flex-direction: row;
@@ -66,6 +71,7 @@
     align-items: center;
     justify-content: center;
     backdrop-filter: blur(4.2px);
+    background-color: rgba(255, 255, 255, 0.308);
     -webkit-backdrop-filter: blur(4.2px);
     background-position-x: 55vw;
     background-position-y: -2vh;
@@ -103,15 +109,17 @@
 /* selectable grid */
 .characterContainer {
     position: relative;
+    display: flex;
+    margin-top: 7vh;
 }
 
 /* for each character in selectable grid */
 @keyframes hoverpulse {
     50% {
-        border: solid 4px orange;
+        border: solid 2.7px orange;
     }
     80% {
-        border: solid 4px rgb(199, 199, 199);
+        border: solid 2.7px rgb(199, 199, 199);
     }
 }
 
@@ -124,7 +132,7 @@
 }
 
 .selected:hover {
-    animation: hoverpulse 1.51s infinite;
+    animation: hoverpulse 1.1s infinite;
 }
 
 
@@ -155,7 +163,7 @@
     flex-direction: column;
 }
 .selectable:hover {
-    animation: hoverpulse 1.51s infinite;
+    animation: hoverpulse 1.1s infinite;
 }
 
 .selectableName {
